--- a/manifests/cronjob.yaml
+++ b/manifests/cronjob.yaml
@@ -2,8 +2,9 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: hello-cron
+  namespace: default   # ✅ Add this
 spec:
-  schedule: "*/1 * * * *"   # every 1 minute
+  schedule: "*/1 * * * *"
   jobTemplate:
     spec:
       template:
