--- a/manifests/cronjob.yaml
+++ b/manifests/cronjob.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: hello-cron
-  namespace: default   # ✅ Add this
+  namespace: default
 spec:
   schedule: "*/1 * * * *"
   jobTemplate:
